--- a/dashboard/src/sass/helpers/_base.scss
+++ b/dashboard/src/sass/helpers/_base.scss
@@ -1,26 +1,26 @@
 
-img{
-    max-width: 100%;
-    height: auto;
-    display: block;
-}
-
-// ul{ //##開啟的話ul會有黑色圈圈
-//     list-style-type: none;
-//     padding-inline-start: 0;
+// img{
+//     max-width: 100%;
+//     height: auto;
+//     display: block;
 // }
 
-// input ,textarea{
-textarea{
-    outline: none;
-    border-style: none;
-}
+// // ul{ //##開啟的話ul會有黑色圈圈
+// //     list-style-type: none;
+// //     padding-inline-start: 0;
+// // }
 
-[type=submit]{
-    cursor: pointer;
-    border: none;
-}
-select{
-    outline: none;
-    appearance: none;
-}
+// // input ,textarea{
+// textarea{
+//     outline: none;
+//     border-style: none;
+// }
+
+// [type=submit]{
+//     cursor: pointer;
+//     border: none;
+// }
+// select{
+//     outline: none;
+//     appearance: none;
+// }
