--- a/dashboard/src/sass/helpers/_util.scss
+++ b/dashboard/src/sass/helpers/_util.scss
@@ -2,6 +2,8 @@
  .font-family-lato{
     font-family: 'Lato', sans-serif;
   }
+
+ 
 //   .font-size-xs{
 //     font-size: $font-size-xs;//variables沒有
 //   }
@@ -17,3 +19,23 @@
   .font-size-lg{
     font-size: $font-size-lg;//1.25rem
   }
+
+  .icon_select{
+    background: url("../images/expand_more.svg") no-repeat;
+    background-position: 95% center;
+
+  }
+
+
+  .page_arrow{
+    padding-top: 6px;
+    padding-bottom: 6px;
+}
+
+.select_arrow{
+  background: url("../images/expand_more.svg") no-repeat;
+  background-position: 95% center;
+    // background-size: contain;
+    // background-position-x: right;
+    appearance: none;
+}
