--- a/dashboard/src/sass/helpers/_custom.scss
+++ b/dashboard/src/sass/helpers/_custom.scss
@@ -62,7 +62,12 @@
      width: 40px;
      height: 40px;
      border-radius: 50%;
+     overflow: hidden;
  }
+ //##dashboard========================
+ 
+
+
 // ===================================
 // .bg-green{
 //     background-color: #EDF4EE;
