--- a/dashboard/src/sass/layout/_nav.scss
+++ b/dashboard/src/sass/layout/_nav.scss
@@ -12,6 +12,7 @@
 }
 
 .nav-link{
+    position: relative;
     // @@這個主題主色應該是選深色還淺色 因為a預設會用primary
     color:$dark;
     // @@為何無反應 被蓋住了
@@ -23,10 +24,24 @@
         content:"";
         position: absolute;
         display: block;
-
+        width: 4px;
+        height: 40px;
+        background: #2A8356;
+        top: 0px;
+        left: -1.25rem;
     }
 
     &.active{
         color:$brand-secondary;
+        &:before{
+            content:"";
+            position: absolute;
+            display: block;
+            width: 4px;
+            height: 40px;
+            background: #2A8356;
+            top: 0px;
+            left: -1.25rem;
+        }
     }
 }
