--- a/dashboard/src/sass/helpers/_variables.scss
+++ b/dashboard/src/sass/helpers/_variables.scss
@@ -6,7 +6,7 @@ $brand-primary-dark:#CDDDCD;//primary
 $brand-secondary:#2A8356;//secondary
 $brand-dark:#121212;//dark
 
-$bg-green: #EDF4EE;//!!!!!喔喔要寫前面才吃得到
+$bg-green: #EDF4EE;//!!!!!要寫前面才吃得到
 $bg-green-dark:#CDDDCD;
 // $brand-primary-dark:;
 // Color system
