--- a/dashboard/src/sass/helpers/_custom.scss
+++ b/dashboard/src/sass/helpers/_custom.scss
@@ -1,64 +1,19 @@
 
-.bg-secondary{
-    color:white;
-    background-color: #2A8356 !important;
-}
-
-.bg-primary{
-    background-color: #EDF4EE !important;//不加important還會被吃掉
-}
-
-// @@variable有改 但這個也是沒效的
-.pl-5{
-    // padding-left: 2rem !important;
-}
-.px-5{
-    padding-left: 2rem !important;
-    padding-right: 2rem !important;
-}
-.p-5{
-    padding: 2rem !important;
-}
-// =================================================
-
-
- 
- //##dashboard========================
- 
-
-
-// ===================================
-// .bg-green{
-//     background-color: #EDF4EE;
+// .bg-secondary{
+//     color:white;
+//     background-color: #2A8356 !important;
 // }
+
+// .bg-primary{
+//     background-color: #EDF4EE !important;//不加important還會被吃掉
+// }
+
 .main{
     min-height: calc(100vh + 100px);
 }
-.sidebar-sticky{
-    // @無效 結果是不夠高
-    // min-height: 400px;
-    // top: 0;//以視窗高貼上下
-    // left: 0;
-    // bottom: 0;//!!原本外面row會占滿高 但因為是postion會縮
-    position: fixed;
-    width: 100%;//會吃到整個視窗
-    top: 0;
-    bottom: 0;
-    // min-height: 100vh;//!!會吃不到
-    // min-height: 100vh;//!!!視窗拉多高就多高
-    .card-body{
-        min-height: 200px;
-    }
-}
 
 
-.inline-flex{
-    display: inline-flex;
-}
 
-.outline{
-    outline:1px solid red;
-}
 
 // 只能這樣覆蓋嗎
 // 覆蓋無效...
@@ -68,19 +23,8 @@
     border-color:$brand-primary-dark;
     color:$brand-dark;
 }
-.card-header{
-    margin: -1px !important;
-}
 
-// 又被吃掉了
-// a:hover{
-//     // color:$bg-green;
-//     color:green;
-// }
 
-// .btn:hover{
-//     color:$bg-green;
-// }
 .reply_block{
     /* top: 0; */
     right: 0;//可同時並存!!
@@ -123,13 +67,27 @@
 }
 
 
-// ==================================
-
-
-// ----------------------
 .user_photo{
-    background-image: url('https://images.unsplash.com/photo-1522069394066-326005dc26b2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80');
-    background-size: cover;
     width: 141px;
     height: 141px;
+    background-image: url('../images/emir.jpeg');
+    background-size: cover;
 }
+
+
+// .sidebar-sticky{
+//     // @無效 結果是不夠高
+//     // min-height: 400px;
+//     // top: 0;//以視窗高貼上下
+//     // left: 0;
+//     // bottom: 0;//!!原本外面row會占滿高 但因為是postion會縮
+//     position: fixed;
+//     width: 100%;//會吃到整個視窗
+//     top: 0;
+//     bottom: 0;
+//     // min-height: 100vh;//!!會吃不到
+//     // min-height: 100vh;//!!!視窗拉多高就多高
+//     .card-body{
+//         min-height: 200px;
+//     }
+// }
