--- a/ReservationWeb/app/layout.ejs
+++ b/ReservationWeb/app/layout.ejs
@@ -50,9 +50,9 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <a class="navbar-brand py-0" href="#">
-                <h1 class="navbar_logo">ALOHA</h1>
+                <h1 class="navbar_logo mb-0">ALOHA</h1>
             </a>
-             <!-- 手機顯示 Login -->
+            <!-- 手機顯示 Login -->
             <div class="navbar-nav d-md-none">
                 <!-- 未登入 -->
                 <a class="js-nav__login nav-link text-dark font-weight-bold" 
