--- a/ReservationWeb/app/assets/style/helpers/_variables.scss
+++ b/ReservationWeb/app/assets/style/helpers/_variables.scss
@@ -80,7 +80,7 @@ $theme-colors: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
 $theme-colors: map-merge(
   (
-    "primary":    $brand-primary//$primary,
+    "primary":    $brand-primary,//$primary,
     "secondary":  $secondary,
     "success":    $success,
     "info":       $info,
@@ -147,9 +147,9 @@ $spacers: map-merge(
     2: ($spacer * .5),
     3: $spacer,
     4: ($spacer * 1.5),
-    5: ($spacer * 2)//原本3
-    6: ($spacer * 3)
-    7: ($spacer * 4)
+    5: ($spacer * 3),//原本3
+    // 6: ($spacer * 4),
+    // 7: ($spacer * 4)
   ),
   $spacers
 );
