--- a/ReservationWeb/app/layout.ejs
+++ b/ReservationWeb/app/layout.ejs
@@ -60,7 +60,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <a class="navbar-brand py-0" href="index.html">
-                <h1 class="logo mb-0">ALOHA</h1>
+                <h1 class="l_logo mb-0">ALOHA</h1>
             </a>
             <!-- 手機顯示 Login -->
             <div class="navbar-nav d-md-none">
@@ -70,9 +70,9 @@
                     data-target="#mobileLogin"> 
                     <span class="login__userName">Login</span> 
                 </a>
-                <!-- 已登入 -->
-                <button class="js-nav__hasLogin  nav-link btn btn-link login__navImage ml-5 d-none">
-                </button>
+                <!-- 已登入todo -->
+                <!-- <button class="js-nav__hasLogin  nav-link btn btn-link login__navImage ml-5 d-none">
+                </button> -->
             </div>
             <div class="collapse navbar-collapse " id="navbarSupportedContent">
                 <!-- ##ml-auto -->
@@ -107,7 +107,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content rounded-0">
                 <div class="modal-header border-0 rounded-0">
-                    <h4 class="logo modal-title mb-0">
+                    <h4 class="l_logo modal-title mb-0">
                         ALOHA
                     </h4>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
