--- a/ReservationWeb/app/assets/style/pages/_search-result.scss
+++ b/ReservationWeb/app/assets/style/pages/_search-result.scss
@@ -5,7 +5,10 @@
                 font-size: 18px;
             }
         }
-        .inner {
+        ._inner {
+            // &__title{
+
+            // }
             &__item {
                 // 手機
                 margin: 0px -15px;//##no-gutter
@@ -23,11 +26,15 @@
                     box-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.075);
                     transition: all 0.35s;
 
-                    .inner__title {
+                    ._inner__title {
                         text-decoration: underline;
                     }
                 }
             }
+
+            // &__badge{
+                
+            // }
         }
     }
 }
