--- a/ReservationWeb/app/assets/style/pages/_index.scss
+++ b/ReservationWeb/app/assets/style/pages/_index.scss
@@ -1,33 +1,5 @@
 
 
-
-
-// .swiper-container {
-//     width: 100%;
-//     // height: 500px;
-//     height: 320px;
-// }
-
-// .swiper-slide {
-//     text-align: center;
-//     font-size: 18px;
-
-
-//     // /* Center slide text vertically */
-//     // display: -webkit-box;
-//     // display: -ms-flexbox;
-//     // display: -webkit-flex;
-//     // display: flex;
-//     // -webkit-box-pack: center;
-//     // -ms-flex-pack: center;
-//     // -webkit-justify-content: center;
-//     // justify-content: center;
-//     // -webkit-box-align: center;
-//     // -ms-flex-align: center;
-//     // -webkit-align-items: center;
-//     // align-items: center;
-// }
-
 /* 區塊命名 */
 // @@裡面客製修改元件該如何命
 .section {
@@ -50,7 +22,8 @@
         .swiper-slide {
             text-align: center;
             font-size: 18px;
-
+            white-space:nowrap;
+            // ##會折行
             // display: flex;
             // justify-content: center;
             // align-items: center;
